# gnucash-tools

./: README.md  pyproject.toml
gnucash_tools/: common.py  dashboard.py  export_shared_expenses.py  util.py
gnucash_tools/common/: __init__.py  account.py  book.py  commodity.py  transaction.py
