[tool.poetry]
name = "gnucash-tools"
version = "0.1.0"
description = ""
authors = ["Michael Rader <mrader1248@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pydantic-settings = "^2.1.0"
dash = "^2.15.0"
dash-bootstrap-components = "^1.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[tool.poetry.scripts]
gct-export-shared-expenses = "gnucash_tools.export_shared_expenses:main"
gct-dashboard = "gnucash_tools.dashboard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
